# tap-sharepointsites

./: .gitignore  README.md  meltano.yml  pyproject.toml
tap_sharepointsites/: auth.py  client.py  file_stream.py  list_stream.py  pages_stream.py  tap.py  text_stream.py
tap_sharepointsites/file_handlers/: excel_handler.py
tap_sharepointsites/tests/: test_core.py  test_file_stream.py  test_list_stream.py  test_pages_stream.py  test_text_stream.py
tap_sharepointsites/tests/configuration/: test_catalog.py
