[tool.poetry]
name = "tap-sharepointsites"
version = "1.2.0"
description = "`tap-sharepointsites` is a Singer tap for sharepointsites, built with the Meltano Singer SDK."
authors = ["Henning Holgersen"]
keywords = [
    "ELT",
    "sharepointsites",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
requests = "^2.25.1"
singer-sdk = {extras = ["testing"], version = "^0.46.1"}
azure-identity = "^1.11"
openpyxl = "^3.0.7"
textract-py3 = "^2.1.0"
xlrd = "<2.0.0" # 2.0.0 doesn't support xlsx
selectolax = "0.3.17"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
tox = "^3.14.3"
flake8 = "^3.9.2"
black = "^22.3.0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"
responses = ">0.1.0"
pytest-cov = ">=3.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_sharepointsites"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-sharepointsites = 'tap_sharepointsites.tap:Tapsharepointsites.cli'

[tool.coverage.run]
omit = ["*tests*"]